--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ pandas==2.2.3
 Pillow==11.0.0
 scikit_learn==1.5.2
 seaborn==0.13.2
-skimage==0.0
+scikit-image==0.0
 torch==2.5.0
 torchvision==0.20.0
