--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python==3.9
 pip==24.3.1
 setuptools>=65.5.1
 wheel>=0.41.0
@@ -11,6 +12,6 @@ pandas==2.2.3
 Pillow==11.0.0
 scikit_learn==1.5.2
 seaborn==0.13.2
-scikit-image==0.0
+skimage==0.0
 torch==2.5.0
 torchvision==0.20.0
