--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ Pillow==11.0.0
 scikit_learn==1.5.2
 seaborn==0.13.2
 scikit-image==0.19.3
+scikit-image --upgrade
 torch==2.5.0
 torchvision==0.20.0
